--- a/ERP Love-Gid/Views/Home/Index.cshtml
+++ b/ERP Love-Gid/Views/Home/Index.cshtml
@@ -1,31 +1,47 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Мои договоры"; 
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+<h2>Мои Договоры</h2>
+
+@using (Html.BeginForm("Index", "Home", FormMethod.Post))
+{
+    @*<p> @Html.DropDownList("Year", (IEnumerable<SelectListItem>)ViewData["Years"], null, new { style = "width : 200px", @class = "form-control" }) @Html.ValidationMessage("Years")</p>*@
+<table>
+    <tr>
+        <td> <b>Дата мероприятия</b></td>
+        <td><b>ФИО клиента или название организации</b></td>
+        <td><b>Тип договора</b></td>
+        <td><b>Сумма по договору</b></td>
+        <td><b>Получено оплат по договору</b></td>
+        <td><b>Получено доп.</b></td>
+        <td><b>Статус</b></td>  
+        <td><b>Комментарий</b></td>
+
+    </tr>
+    @foreach (Contract cw in (IEnumerable<Contract>)ViewData["Contracts"])
+    {
+
+            <tr>
+                <td>@cw.Date_of_event.Day.@cw.Date_of_event.Month.@cw.Date_of_event.Year</td>
+
+                <td>@cw.ClientSet.FIO</td>
+                <td>@cw.EventSet.Type</td>
+                <td>@cw.Sum_only_contract</td>
+
+                <td>@cw.Received</td>
+                <td>@cw.Sum_plus</td>
+                <td>@cw.Status</td>
+                <td>@cw.Comment</td>
+
+            </tr>
+    }
+</table>
+    <p></p>
+    <p><input type="submit" value="Добавить" class="form-control-added" /></p>
+
+                @*<div contenteditable="true" style="width:100%!important ; box-sizing:border-box!important; position:absolute!important; ;">  @Html.TextArea("Notes")</div>*@ 
+
+}
+@*<div> @Html.TextArea("Notes")</div>*@
