--- a/ERP Love-Gid/Content/Site.css
+++ b/ERP Love-Gid/Content/Site.css
@@ -22,3 +22,24 @@ select,
 textarea {
     max-width: 280px;
 }
+table { border:none; border-collapse:separate; table-layout:auto;
+}
+tr td  { padding: 10px; border-collapse:separate;
+}
+
+.form-control-added {
+    display: block;
+    width: 10%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.428571429;
+    color: #fff;
+     background-color: #eee;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s
+}
