--- a/ERP Love-Gid/Content/bootstrap.css
+++ b/ERP Love-Gid/Content/bootstrap.css
@@ -220,7 +220,8 @@ textarea {
 }
 
 table {
-  border-collapse: collapse;
+  border-collapse: separate;
+  
   border-spacing: 0;
 }
 
@@ -4501,12 +4502,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #222222;
-  border-color: #080808;
+  
+    border-color: #080808;
 }
 
 .navbar-inverse .navbar-brand {
-  color: #999999;
+  color: #fff;
 }
 
 .navbar-inverse .navbar-brand:hover,
