pre - public Push

--- a/ERP Love-Gid/Views/Home/MyFinanses.cshtml
+++ b/ERP Love-Gid/Views/Home/MyFinanses.cshtml
@@ -34,8 +34,8 @@
             </tr>
         }
     </table>
-    <p>Итого</p>
-    <p><input type="submit" value="Добавить" name="Pays" class ="form-control-added" /></p>
+    <p><b>Итого @ViewBag.PaymentSum</b></p>
+    <p><input type="submit" value="Добавить" name="MyPays" class ="form-control-added" /></p>
 
     <h3>Сдала деньги</h3>
 
@@ -54,6 +54,8 @@
             <tr></tr>
         }*@
     </table>
+    <p><input type="submit" value="Добавить" name="Handed" class="form-control-added" /></p>
+
     <h3>Ожидаю оплату от клиентов</h3>
     <table>
         <tr>
