pre-re-building

--- a/ERP Love-Gid/Views/Home/AddPaymentDetail.cshtml
+++ b/ERP Love-Gid/Views/Home/AddPaymentDetail.cshtml
@@ -67,7 +67,7 @@
                             <td><p>Дата оплаты: </p></td>
                             <td>
                                 <p>
-                                    <input type="date" name="calendarEvent" class="form-control">
+                                    <input type="date" name="calendarPay" class="form-control">
                                 </p>
                             </td>
                         </tr>
