--- a/ERP Love-Gid/Views/Home/Index.cshtml
+++ b/ERP Love-Gid/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
     {
 
             <tr>
-                <td>@cw.Date_of_event.Day.@cw.Date_of_event.Month.@cw.Date_of_event.Year</td>
+                <td>@cw.Date_of_event.Value.Day.@cw.Date_of_event.Value.Month.@cw.Date_of_event.Value.Year</td>
 
                 <td>@cw.ClientSet.FIO</td>
                 <td>@cw.EventSet.Type</td>
