--- a/ERP Love-Gid/Views/Home/EditContract.cshtml
+++ b/ERP Love-Gid/Views/Home/EditContract.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Добавление контракта";
 }
 
-<h2>Добавление контракта</h2>
+<h2>Изменение контракта</h2>
 @ViewBag.Error
 <div class="container">
     <header>
@@ -91,7 +91,7 @@
 
                             </td>
                         </tr>
-                       
+
                         <tr>
                             <td>
                                 <p>
