--- a/ERP Love-Gid/Views/Home/AddContract.cshtml
+++ b/ERP Love-Gid/Views/Home/AddContract.cshtml
@@ -47,7 +47,7 @@
                             <td><p>Дата заключения договора: </p></td>
                             <td>
                                 <p>
-                                    <input type="date" name="calendarContract" class="form-control">
+                                    <input type="date" name="calendarContract" class="form-control" value="@ViewBag.DateOfSign">
                                 </p>
                             </td>
 
