--- a/ERP Love-Gid/Views/Home/MyFinanses.cshtml
+++ b/ERP Love-Gid/Views/Home/MyFinanses.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm("MyFinanses", "Home", FormMethod.Post))
 {
     <table>
-        <tr>
+        <tr >
             <td>Приход</td>
             <td>Счет</td>
             <td>Проект</td>
@@ -22,21 +22,29 @@
         </tr>
         @foreach (Payments cw in (IEnumerable<Payments>)ViewBag.Payments)
         {
-            
-                <tr onclick="window.location.href = '@Url.Action("EditPaymentDetail", "Home", new { id = cw.Id })'">
-                    <td>@cw.Receipt</td>
-                    <td>@cw.Account.Type</td>
-                    @*<td>@cw.Contract.Name</td>*@
-                  @if (@cw.Contract != null) {<td>@cw.Contract.Date_of_event.ToString().Split(' ')[0]  —  (@cw.Contract.EmployeeSet.Name.First()@cw.Contract.EmployeeSet.Surname.First()) @cw.Contract.ClientSet.FIO</td>}
-                  else {<td>Не указано</td> }
-                    <td>@cw.Event.Type</td>
-              
-                    <td>@cw.Employee.Name @cw.Employee.Surname</td>
-                    <td>@cw.Comment</td>
-                    <td>@cw.Date.Day.@cw.Date.Month.@cw.Date.Year</td>
 
-                </tr>
-            
+        <tr onclick="window.location.href = '@Url.Action("EditPaymentDetail", "Home", new { id = cw.Id })'">
+            <td>@cw.Receipt</td>
+            @if (@cw.Account != null)
+            {
+            <td>@cw.Account.Type</td>}
+             
+
+             @*<td>@cw.Contract.Name</td>*@
+            @if (@cw.Contract != null)
+            {
+                <td>@cw.Contract.Date_of_event.ToString().Split(' ')[0]  —  (@cw.Contract.EmployeeSet.Name.First()@cw.Contract.EmployeeSet.Surname.First()) @cw.Contract.ClientSet.FIO</td>}
+            else
+            {
+                <td>Не указано</td>}
+            <td>@cw.Event.Type</td>
+
+            <td>@cw.EmployeeTo.Name @cw.EmployeeTo.Surname</td>
+            <td>@cw.Comment</td>
+            <td>@cw.Date.Day.@cw.Date.Month.@cw.Date.Year</td>
+
+        </tr>
+
         }
     </table>
     <p><b>Итого @ViewBag.PaymentSum</b></p>
@@ -46,19 +54,19 @@
 
     <table class="NumericTable">
         <tr>
-             <td> <b>Сумма</b></td>
+            <td> <b>Сумма</b></td>
             <td><b>Счет</b></td>
             <td><b>Дата</b></td>
             <td><b>Проверка</b></td>
 
 
         </tr>
-        @foreach ( Pay_min cw in (IEnumerable<Pay_min>)ViewBag.Pay_min)
-        { 
+        @foreach (Pay_min cw in (IEnumerable<Pay_min>)ViewBag.Pay_min)
+        {
             if (@cw.Finished)
             {
-                <tr>
-                     <td> <b>@cw.Sum</b></td>
+                <tr onclick="window.location.href = '@Url.Action("EditPay_min", "Home", new { id = cw.Id })'">
+                    <td> <b>@cw.Sum</b></td>
                     <td><b>@cw.Account.Type</b></td>
                     <td><b>@cw.Date.Day.@cw.Date.Month.@cw.Date.Year</b></td>
                     <td><b>✔</b></td>
@@ -66,8 +74,8 @@
                 </tr>}
             else
             {
-                <tr>
- 
+                <tr onclick="window.location.href = '@Url.Action("EditPay_min", "Home", new { id = cw.Id })'">
+
                     <td> <b>@cw.Sum</b></td>
                     <td><b>@cw.Account.Type</b></td>
                     <td><b>@cw.Date.Day.@cw.Date.Month.@cw.Date.Year</b></td>
@@ -81,64 +89,114 @@
 
     <p><input type="submit" value="Добавить" name="Handed" class="form-control-added" /></p>
 
-    if (@ViewBag.InformerCount != 0) { 
-    <h3>3. План выплат от клиентов</h3>
-    <table >
-        <tr>
-            <td> <b>Сумма</b></td>
-            <td><b>Проект</b></td>
-            <td><b>Тип</b></td>
-            <td><b>Дата</b></td>
-            <td><b>Статус</b></td>
+    if (@ViewBag.InformerCount != 0)
+    {
+        <h3>3. План выплат от клиентов</h3>
+        <table>
+            <tr>
+                <td> <b>Сумма</b></td>
+                <td><b>Проект</b></td>
+                <td><b>Тип</b></td>
+                <td><b>Дата</b></td>
+                <td><b>Статус</b></td>
 
-        </tr>
-        
-        @foreach (Contract cw in (IEnumerable<Contract>)ViewBag.Informer)
-        {
-            if(cw.Payment1Date.Value.Month==DateTime.Today.Month&& cw.Payment1Date.Value.Year == DateTime.Today.Year )
-            { 
-             <tr>
-                <td class="Informer"> <b>@cw.Payment1Sum</b></td>
-                <td><b>@cw.Name</b></td>
-                <td><b>@cw.EventSet.Type</b></td>
-                  <td><b>@cw.Payment1Date.Value.Day.@cw.Payment1Date.Value.Month.@cw.Payment1Date.Value.Year</b></td>
+            </tr>
 
-                <td><b>@cw.Status</b></td>
-            </tr>}
-            else
-                 if (cw.Payment2Date.Value.Month == DateTime.Today.Month && cw.Payment2Date.Value.Year == DateTime.Today.Year)
+            @foreach (Contract cw in (IEnumerable<Contract>)ViewBag.Informer)
             {
-                <tr>
-                    <td class="Informer"> <b>@cw.Payment2Sum</b></td>
-                    <td><b>@cw.Name</b></td>
-                    <td><b>@cw.EventSet.Type</b></td>
-                    <td><b>@cw.Payment2Date.Value.Day.@cw.Payment2Date.Value.Month.@cw.Payment2Date.Value.Year</b></td>
-                    <td><b>@cw.Status</b></td>
-                </tr>}
-            else
-                 if (cw.Payment3Date.Value.Month == DateTime.Today.Month && cw.Payment3Date.Value.Year == DateTime.Today.Year)
-            {
-                <tr>
-                    <td class="Informer"> <b>@cw.Payment3Sum</b></td>
-                    <td><b>@cw.Name</b></td>
-                    <td><b>@cw.EventSet.Type</b></td>
-                    <td><b>@cw.Payment3Date.Value.Day.@cw.Payment3Date.Value.Month.@cw.Payment3Date.Value.Year</b></td>
-                    <td><b>@cw.Status</b></td>
-                </tr>}
-        }
-    </table>
-    <p>Ожидаю <b class="Informator" id="info">@ViewBag.InformerSum</b></p>}
+                if (cw.Payment1Date.Value.Month == DateTime.Today.Month && cw.Payment1Date.Value.Year == DateTime.Today.Year)
+                {
+                    <tr>
+                        <td class="Informer"> <b>@cw.Payment1Sum</b></td>
+                        <td><b>@cw.Name</b></td>
+                        <td><b>@cw.EventSet.Type</b></td>
+                        <td><b>@cw.Payment1Date.Value.Day.@cw.Payment1Date.Value.Month.@cw.Payment1Date.Value.Year</b></td>
+
+                        <td><b>@cw.Status</b></td>
+                    </tr>}
+                else
+                     if (cw.Payment2Date.Value.Month == DateTime.Today.Month && cw.Payment2Date.Value.Year == DateTime.Today.Year)
+                {
+                    <tr>
+                        <td class="Informer"> <b>@cw.Payment2Sum</b></td>
+                        <td><b>@cw.Name</b></td>
+                        <td><b>@cw.EventSet.Type</b></td>
+                        <td><b>@cw.Payment2Date.Value.Day.@cw.Payment2Date.Value.Month.@cw.Payment2Date.Value.Year</b></td>
+                        <td><b>@cw.Status</b></td>
+                    </tr>}
+                else
+                     if (cw.Payment3Date.Value.Month == DateTime.Today.Month && cw.Payment3Date.Value.Year == DateTime.Today.Year)
+                {
+                    <tr>
+                        <td class="Informer"> <b>@cw.Payment3Sum</b></td>
+                        <td><b>@cw.Name</b></td>
+                        <td><b>@cw.EventSet.Type</b></td>
+                        <td><b>@cw.Payment3Date.Value.Day.@cw.Payment3Date.Value.Month.@cw.Payment3Date.Value.Year</b></td>
+                        <td><b>@cw.Status</b></td>
+                    </tr>}
+            }
+        </table>
+        <p>Ожидаю <b class="Informator" id="info">@ViewBag.InformerSum</b></p>}
     @*<div contenteditable="true" style="width:100%!important ; box-sizing:border-box!important; position:absolute!important; ;">  @Html.TextArea("Notes")</div>*@
 
+
+    <h3>Отчет о моей работе</h3>
+
+    <table class="NumericTable">
+        <tr>
+            <td> <b>Сумма</b></td>
+            <td><b>От кого</b></td>
+            <td><b>Проект</b></td>
+
+            <td><b>Тип</b></td>
+            <td><b>Коммент</b></td>
+            <td><b>Статус</b></td>
+
+
+        </tr>
+        @foreach (Payments cw in (IEnumerable<Payments>)ViewBag.MyJob)
+        {
+            if (@cw.StatusForPeers == true)
+            {
+                <tr>
+                    <td><p>@cw.Sum</p></td>
+                    <td><p>@cw.Employee.Name.First()@cw.Employee.Surname.First()</p></td>
+
+                    <td><p>@cw.Comment</p></td>
+                    <td><p>@cw.Event.Type</p></td>
+
+                    <td><p>@cw.Contract.Comment</p></td>
+                    <td><p>✔</p></td>
+
+                </tr>}
+            else
+            {
+                <tr>
+
+                    <td> <p>@cw.Receipt</p></td>
+                    <td><p>@cw.Employee.Name.First() @cw.Employee.Surname.First()</p></td>
+
+                    <td><p>@cw.Contract.Name</p></td>
+                    <td><p>@cw.Event.Type</p></td>
+
+                    <td><p>@cw.Comment</p></td>
+                    <td><p>Не оплачено</p></td>
+
+                </tr>}
+        }
+
+    </table>
+    <p><input type="submit" value="Добавить" name="MyJob" class="form-control-added" /></p>
+
 }
- 
+
 <script>
     var b = 0;
     $('.Informer').each(function () {
         b += parseFloat($(this).text());
     });
- 
-   
-     
-        $('#info').text(b);
- </script>
+
+
+
+    $('#info').text(b);
+</script>
