Подзаконченная ветка пользователя

--- a/ERP Love-Gid/Views/Home/AddReceivedMoney.cshtml
+++ b/ERP Love-Gid/Views/Home/AddReceivedMoney.cshtml
@@ -44,7 +44,7 @@
                             <td><p>Дата оплаты: </p></td>
                             <td>
                                 <p>
-                                    <input type="date" name="calendarPay" class="form-control">
+                                    <input type="date" name="calendarPay" class="form-control" value="@ViewBag.DateOfSign">
                                 </p>
                             </td>
                         </tr>
