--- a/ERP Love-Gid/Views/Home/MyFinanses.cshtml
+++ b/ERP Love-Gid/Views/Home/MyFinanses.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm("MyFinanses", "Home", FormMethod.Post))
 {
     <table>
-        <tr >
+        <tr>
             <td>Приход</td>
             <td>Счет</td>
             <td>Проект</td>
@@ -23,27 +23,27 @@
         @foreach (Payments cw in (IEnumerable<Payments>)ViewBag.Payments)
         {
 
-        <tr onclick="window.location.href = '@Url.Action("EditPaymentDetail", "Home", new { id = cw.Id })'">
-            <td>@cw.Receipt</td>
-            @if (@cw.Account != null)
-            {
-            <td>@cw.Account.Type</td>}
-             
+            <tr onclick="window.location.href = '@Url.Action("EditPaymentDetail", "Home", new { id = cw.Id })'">
+                <td>@cw.Receipt</td>
+                @if (@cw.Account != null)
+                {
+                    <td>@cw.Account.Type</td>}
 
-             @*<td>@cw.Contract.Name</td>*@
-            @if (@cw.Contract != null)
-            {
-                <td>@cw.Contract.Date_of_event.ToString().Split(' ')[0]  —  (@cw.Contract.EmployeeSet.Name.First()@cw.Contract.EmployeeSet.Surname.First()) @cw.Contract.ClientSet.FIO</td>}
-            else
-            {
-                <td>Не указано</td>}
-            <td>@cw.Event.Type</td>
 
-            <td>@cw.EmployeeTo.Name @cw.EmployeeTo.Surname</td>
-            <td>@cw.Comment</td>
-            <td>@cw.Date.Day.@cw.Date.Month.@cw.Date.Year</td>
+                @*<td>@cw.Contract.Name</td>*@
+                @if (@cw.Contract != null)
+                {
+                    <td>@cw.Contract.Date_of_event.ToString().Split(' ')[0]  —  (@cw.Contract.EmployeeSet.Name.First()@cw.Contract.EmployeeSet.Surname.First()) @cw.Contract.ClientSet.FIO</td>}
+                else
+                {
+                    <td>Не указано</td>}
+                <td>@cw.Event.Type</td>
 
-        </tr>
+                <td>@cw.EmployeeTo.Name @cw.EmployeeTo.Surname</td>
+                <td>@cw.Comment</td>
+                <td>@cw.Date.Day.@cw.Date.Month.@cw.Date.Year</td>
+
+            </tr>
 
         }
     </table>
@@ -65,21 +65,21 @@
         {
             if (@cw.Finished)
             {
-                <tr onclick="window.location.href = '@Url.Action("EditPay_min", "Home", new { id = cw.Id })'">
+                <tr class="KeyForPay" onclick="window.location.href = '@Url.Action("EditPay_min", "Home", new { id = cw.Id })'">
                     <td> <b>@cw.Sum</b></td>
                     <td><b>@cw.Account.Type</b></td>
                     <td><b>@cw.Date.Day.@cw.Date.Month.@cw.Date.Year</b></td>
-                    <td><b>✔</b></td>
+                    <td><b >✔</b></td>
 
                 </tr>}
             else
             {
-                <tr onclick="window.location.href = '@Url.Action("EditPay_min", "Home", new { id = cw.Id })'">
+                <tr class="KeyForPay" onclick="window.location.href = '@Url.Action("EditPay_min", "Home", new { id = cw.Id })'">
 
                     <td> <b>@cw.Sum</b></td>
                     <td><b>@cw.Account.Type</b></td>
                     <td><b>@cw.Date.Day.@cw.Date.Month.@cw.Date.Year</b></td>
-                    <td><b>Не соответствие суммы</b></td>
+                    <td><b >Не соответствие суммы, счета или даты</b></td>
 
                 </tr>}
         }
@@ -140,7 +140,7 @@
     @*<div contenteditable="true" style="width:100%!important ; box-sizing:border-box!important; position:absolute!important; ;">  @Html.TextArea("Notes")</div>*@
 
 
-    <h3>Отчет о моей работе</h3>
+    <h3>Отчет о моей работе </h3>
 
     <table class="NumericTable">
         <tr>
@@ -158,20 +158,20 @@
         {
             if (@cw.StatusForPeers == true)
             {
-                <tr>
+                <tr onclick="window.location.href = '@Url.Action("EditPayFromPeer", "Home", new { id = cw.Id })'">
                     <td><p>@cw.Sum</p></td>
                     <td><p>@cw.Employee.Name.First()@cw.Employee.Surname.First()</p></td>
 
-                    <td><p>@cw.Comment</p></td>
+                    <td><p>@cw.Contract.Name</p></td>
                     <td><p>@cw.Event.Type</p></td>
 
-                    <td><p>@cw.Contract.Comment</p></td>
+                    <td><p>@cw.Comment</p></td>
                     <td><p>✔</p></td>
 
                 </tr>}
             else
             {
-                <tr>
+                <tr onclick="window.location.href = '@Url.Action("EditPayFromPeer", "Home", new { id = cw.Id })'">
 
                     <td> <p>@cw.Receipt</p></td>
                     <td><p>@cw.Employee.Name.First() @cw.Employee.Surname.First()</p></td>
@@ -188,6 +188,73 @@
     </table>
     <p><input type="submit" value="Добавить" name="MyJob" class="form-control-added" /></p>
 
+
+    <h3>Моя ЗП</h3>
+
+    <table class="NumericTable">
+        <tr>
+            <td> <b>Сумма</b></td>
+            <td><b>В ЗП</b></td>
+            <td><b>Проект</b></td>
+
+            <td><b>Тип</b></td>
+            <td><b>Коммент</b></td>
+            <td><b>Статус</b></td>
+
+
+        </tr>
+        @foreach (Payments cw in (IEnumerable<Payments>)ViewBag.MySalary)
+        {
+
+            {
+                if (@cw.StatusForSalary == true)
+                {
+                    <tr>
+
+                        <td> <p>@cw.Receipt</p></td>
+                        <td><p></p></td>
+
+                        <td><p>@cw.Contract.Name</p></td>
+                        <td><p>@cw.Event.Type</p></td>
+
+                        <td><p>@cw.Comment</p></td>
+                        <td><p>✔</p></td>
+
+                    </tr>}
+                else
+                 if (@cw.Employee.Id!=cw.EmployeeTo.Id)
+                {
+                    <tr>
+
+                        <td> <p>@cw.Receipt</p></td>
+                        <td><p></p></td>
+
+                        <td><p>@cw.Contract.Name</p></td>
+                        <td><p>@cw.Event.Type</p></td>
+
+                        <td><p>@cw.Comment</p></td>
+                        <td><p>Не оплачено</p></td>
+
+                    </tr>}
+                
+                else
+                {
+                    <tr>
+
+                        <td> <p>@cw.Receipt</p></td>
+                        <td><p></p></td>
+
+                        <td><p>@cw.Contract.Name</p></td>
+                        <td><p>@cw.Event.Type</p></td>
+
+                        <td><p>@cw.Comment</p></td>
+                        <td><p class="CheckMySalary">Не сходится счет или сумма</p></td>
+
+                    </tr>}
+            }
+        }
+
+    </table>
 }
 
 <script>
@@ -200,3 +267,4 @@
 
     $('#info').text(b);
 </script>
+ 
