--- a/ERP Love-Gid/Views/Shared/_LayoutAdmin.cshtml
+++ b/ERP Love-Gid/Views/Shared/_LayoutAdmin.cshtml
@@ -16,11 +16,13 @@
         <div class="container">
             <div class="navbar-header">
 
-                @Html.ActionLink("Все договоры", "Index", "Admin", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Все договоры", "Index", "Admin", new { area = "", id = ViewBag.ID }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Финансы компании", "CompanyFinanses", "Admin", new { area = "" }, new { @class = "navbar-brand" })
 
                 @Html.ActionLink("Сотрудники", "Employees", "Admin", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Зарплаты", "Salary", "Admin", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Типы работ", "Events", "Admin", new { area = "" }, new { @class = "navbar-brand" })
+
                 @Html.ActionLink("Режим сотрудника", "ChangeToUser", "Admin", new { area = "" }, new { @class = "navbar-brand" })
 
 
