--- a/ERP Love-Gid/Views/Shared/_Layout.cshtml
+++ b/ERP Love-Gid/Views/Shared/_Layout.cshtml
@@ -16,6 +16,12 @@
         <div class="container">
             <div class="navbar-header">
 
+                @if (ViewBag.DateMonth1 != null)
+                {
+                    <span>
+                        @Html.DropDownList("DateMonth", (IEnumerable<SelectListItem>)ViewData["DateMonth1"], null, new { id= "Months",style = "width : 200px; background:#5682a3", @class = "navbar-brand", onchange = "onMyDropDownChange()" });@Html.ValidationMessage("DatePays");
+                    </span>
+                }
                 @Html.ActionLink("Мои договоры", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Мои Финансы", "MyFinanses", "Home", new { area = "" }, new { @class = "navbar-brand" })
 
@@ -25,7 +31,8 @@
 
                 @Html.ActionLink("Выйти", "Exit", "Home", new { @class = "navbar-brand" })
                 <text class="navbar-brand"><strong>@ViewBag.User</strong> </text>
-               
+
+
 
             </div>
 
@@ -47,3 +54,10 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+<script>
+    function onMyDropDownChange() { 
+
+        window.location.href = '@(Url.Action(ViewContext.RouteData.Values["action"].ToString(), ViewContext.RouteData.Values["controller"].ToString()))?numberofMonth=' + $("#Months").get(0).selectedIndex ;
+    }
+ 
+</script>
